--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.3",
     "@astrojs/check": "^0.9.4",
+    "@astrojs/netlify": "^5.5.3",
+    "@astrojs/sitemap": "^3.2.0",
+    "@astrojs/tailwind": "^5.1.2",
+    "astro": "^4.16.3",
+    "astro-icon": "^1.1.1",
+    "tailwindcss": "^3.4.13",
     "typescript": "^5.6.3"
   }
 }
