--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "astro-icon": "^1.1.1",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.3"
+  },
+  "devDependencies": {
+    "@iconify-json/tabler": "^1.2.5"
   }
 }
