--- a/package.json
+++ b/package.json
@@ -12,10 +12,21 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/netlify": "^5.5.4",
+    "@astrojs/react": "^3.6.2",
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^5.1.2",
+    "@sanity/astro": "^3.1.6",
+    "@sanity/client": "^6.22.4",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/visual-editing": "^2.7.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "astro": "^4.16.9",
     "astro-icon": "^1.1.1",
+    "astro-portabletext": "^0.10.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "sanity": "^3.64.1",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.3"
   },
