--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/react": "^3.6.2",
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^5.1.2",
+    "@portabletext/types": "^2.0.13",
     "@sanity/astro": "^3.1.6",
     "@sanity/client": "^6.22.4",
     "@sanity/image-url": "^1.1.0",
