--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@sanity/astro": "^3.1.6",
     "@sanity/client": "^6.22.4",
     "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.64.2",
     "@sanity/visual-editing": "^2.7.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
