--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "astro-portabletext": "^0.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "resend": "^4.0.1",
     "sanity": "^3.64.1",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.3"
