--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/netlify": "^5.5.4",
-    "@astrojs/react": "^3.6.2",
+    "@astrojs/react": "^4.0.0",
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^5.1.2",
     "@portabletext/types": "^2.0.13",
+    "@react-email/components": "^0.0.29",
+    "@react-email/render": "1.0.3",
     "@sanity/astro": "^3.1.6",
     "@sanity/client": "^6.22.4",
     "@sanity/image-url": "^1.1.0",
