--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/react": "^4.0.0",
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^5.1.2",
+    "@portabletext/react": "^3.1.0",
     "@portabletext/to-html": "^2.0.13",
     "@portabletext/types": "^2.0.13",
     "@react-email/components": "^0.0.29",
