--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@astrojs/partytown": "^2.1.3",
     "@astrojs/react": "^4.2.1",
     "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/tailwind": "^6.0.0",
     "@portabletext/react": "^3.1.0",
     "@portabletext/to-html": "^2.0.13",
     "@portabletext/types": "^2.0.13",
@@ -26,6 +25,7 @@
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.64.2",
     "@sanity/visual-editing": "^2.7.0",
+    "@tailwindcss/vite": "^4.0.9",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "astro": "^5.4.1",
@@ -35,7 +35,7 @@
     "react-dom": "^18.3.1",
     "resend": "^4.0.1",
     "sanity": "^3.64.1",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.9",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
