--- a/package.json
+++ b/package.json
@@ -11,24 +11,23 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/netlify": "^6.2.2",
-    "@astrojs/partytown": "^2.1.3",
-    "@astrojs/react": "^4.2.1",
-    "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/netlify": "^6.3.3",
+    "@astrojs/partytown": "^2.1.4",
+    "@astrojs/react": "^4.2.7",
+    "@astrojs/sitemap": "^3.4.0",
     "@portabletext/react": "^3.2.1",
     "@portabletext/to-html": "^2.0.14",
     "@portabletext/types": "^2.0.13",
     "@react-email/components": "^0.0.33",
-    "@react-email/render": "1.0.5",
-    "@sanity/astro": "^3.2.5",
-    "@sanity/client": "^6.28.2",
+    "@react-email/render": "^1.0.5",
+    "@sanity/astro": "^3.2.6",
+    "@sanity/client": "^6.29.1",
     "@sanity/image-url": "^1.1.0",
-    "@sanity/vision": "^3.77.2",
-    "@sanity/visual-editing": "^2.13.6",
+    "@sanity/vision": "^3.89.0",
     "@tailwindcss/vite": "^4.0.9",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "astro": "^5.4.1",
+    "astro": "^5.7.13",
     "astro-icon": "^1.1.5",
     "astro-portabletext": "^0.11.1",
     "react": "^19.0.0",
