--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^19.0.0",
     "resend": "^4.1.2",
     "sanity": "^3.77.2",
+    "swiper": "^12.0.2",
     "tailwindcss": "^4.0.9",
     "typescript": "^5.8.2"
   },
